feat: adicao de readme nas versoes, melhorias no codigo e adicao de novas funcionalidades